package com.st20313779.model;

public enum MealSlot {
    BREAKFAST,
    LUNCH,
    DINNER,
    OTHER
}
